commit from server

--- a/app/views/login/canvas/_login_banner.html.erb
+++ b/app/views/login/canvas/_login_banner.html.erb
@@ -20,11 +20,11 @@
                 :id => 'register_link',
                 :class => (use_new_styles? ? "ic-Login__link ic-Login__register-banner" : "not_external register_banner") do %>
       <div class="ic-Login__banner-title">
-        <%= t('Need a Canvas Account?') %>
+        <%= t('Register') %>
       </div>
-      <div class="ic-Login__banner-subtitle">
+      <!--<div class="ic-Login__banner-subtitle">
         <%= t("Click Here, It's Free!") %>
-      </div>
+      </div>-->
     <% end %>
   <% end %>
 <% end %>
