--- a/app/views/login/canvas/new.html.erb
+++ b/app/views/login/canvas/new.html.erb
@@ -2,7 +2,7 @@
 <%
   css_bundle :login
   js_bundle :login
-  content_for :page_title, t(:page_title, "Log In to Canvas")
+  content_for :page_title, t(:page_title, "IITian's ASC")
 %>
 
 <% extend Api::V1::Account %>
