--- a/app/views/shared/_canvas_footer.erb
+++ b/app/views/shared/_canvas_footer.erb
@@ -1,18 +1,29 @@
 <footer role="contentinfo" id="footer" <% if use_new_styles? %>class="ic-app-footer"<% end %>>
-  <a href="http://www.instructure.com" class="footer-logo <% if use_new_styles? %>ic-app-footer__logo-link<% end %>">
+<ul class="footer-links-left">
+    <li><a href="http://www.iitiansasc.com/about/">About</a></li>
+    <li><a href="http://www.iitiansasc.com/schools-institutes/">Schools, Institutes & Colleges</a></li>
+    <li><a href="http://www.iitiansasc.com/career/">Career</a></li>
+  </ul>
+  <ul class="footer-links-right">
+    <li><a href="http://www.iitiansasc.com/terms/">Terms</a></li>
+    <li><a href="http://www.iitiansasc.com/user-policy/">User Policy</a></li>
+    <li><a href="http://www.iitiansasc.com/investors/">Investors</a></li>
+  </ul>
+
+<!--  <a href="http://www.instructure.com" class="footer-logo <% if use_new_styles? %>ic-app-footer__logo-link<% end %>">
     <span class="screenreader-only">
       <%= t(:by_instructure, 'By Instructure') %>
     </span>
-  </a>
+ </a> -->
   <% if use_new_styles? %><div
   <% else %><span
   <% end %>
     id="footer-links"
     <% if use_new_styles? %>class="ic-app-footer__links"<% end %>>
     <% if Setting.get("show_opensource_linkback", "false") == "true" %>
-      <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a>
+<!--      <a href="http://instructure.com"><%= t('open_source_learning_management_system', 'Open Source LMS') %></a> -->
     <% end %>
-    <a target="_blank" href="http://eepurl.com/1LSkT"><%= t('User Research', 'User Research') %></a>
+<!--    <a target="_blank" href="http://eepurl.com/1LSkT"><%= t('User Research', 'User Research') %></a> -->
     <% unless use_new_styles? %>
       <%= help_link %>
     <% end %>
@@ -20,4 +31,5 @@
   <% if use_new_styles? %></div>
   <% else %></span>
   <% end %>
+
 </footer>
